changing source code js in src/js directory

--- a/public/index.html
+++ b/public/index.html
@@ -266,7 +266,7 @@
 
   <!-- Project Section -->
   <section id="project">
-    <div class="bg-[url('/src/images/pemandangan.jpg')] bg-cover bg-no-repeat bg-origin-border bg-center text-center">
+    <div class="bg-[url('../src/images/pemandangan.jpg')] bg-cover bg-no-repeat bg-origin-border bg-center text-center">
       <div class="bg-sky-600/60 w-full top-0 pt-8 pb-32">
         <div class="container mx-auto">
           <h1 class="text-5xl font-['Acme'] text-white border-b-4 pb-2 border-sky-300 inline-block relative z-10 mb-14">My Project</h1>
@@ -388,8 +388,9 @@
     </div>
   </section>
 
-  <script src="../src/js/script.js" type="module"></script>
+  <script src="../src/js/typed.umd.js"></script>
   <script src="../src/js/particles.js"></script>
   <script src="../src/js/aos.js"></script>
+  <script src="../src/js/script.js"></script>
 </body>
 </html>
