--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Acme&family=Poppins&family=Orbitron:wght@900&family=Comfortaa&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="src/css/aos.css">
+  <link rel="shortcut icon" href="src/images/y-logo.png" type="image/x-icon">
   <script src="https://kit.fontawesome.com/4505de1a69.js" crossorigin="anonymous"></script>
   <title>My Portfolio</title>
 </head>
