--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <li class="lg:px-4 my-2"><a class="lg:hover-menu nav-menu mobile-menu" href="#contact">Contact</a></li>
         <li class="lg:px-4 my-4 lg:my-2 flex justify-end">
           <button id="dark-toggle" class="outline-none">
-            <img src="src/images/moon.png" width="25">
+            <img src="../src/images/moon.png" width="25">
           </button>
         </li>
       </ul>
