--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="src/css/aos.css">
   <link rel="shortcut icon" href="src/images/y-logo.png" type="image/x-icon">
   <script src="https://kit.fontawesome.com/4505de1a69.js" crossorigin="anonymous"></script>
-  <title>My Portfolio</title>
+  <title>Yasin A.H | Portfolio</title>
 </head>
 <body>
   <!-- Navbar Menu -->
