--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <!-- Navbar Menu -->
-  <nav class="border-b-2 w-full bg-white dark:bg-black transition duration-300 ease-in-out dark:border-slate-600 sticky top-0 z-[999]">
+  <nav class="shadow-lg w-full bg-white dark:bg-black transition duration-300 ease-in-out dark:border-slate-600 sticky top-0 z-[999]">
     <div class="sm:container sm:mx-auto flex flex-wrap justify-between lg:items-center py-2">
       <a href="/" class="text-3xl ps-1 font-['Orbitron'] dark:text-white">Yasin A.H.</span></a>
       <button id="hamburger-menu" class="lg:hidden">
@@ -99,7 +99,7 @@
           </div>
         </div>
 
-        <div class="card-experience" data-aos="fade-left" data-aos-delay="500">
+        <div class="card-experience" data-aos="fade-left" data-aos-delay="300">
           <i class="fa-solid fa-business-time text-blue-500 text-4xl border-4 transition duration-200 ease-in-out rounded-full px-4 py-5 border-blue-500"></i>
           <h1 class="text-2xl font-medium mt-6 mb-8">Experience</h1>
 
@@ -143,7 +143,7 @@
         <h1 class="text-5xl font-[Acme] border-b-4 border-sky-500 inline">My Skills</h1>
       </div>
 
-      <div class="flex flex-col lg:flex-row bg-white dark:bg-black transition duration-300 ease-in-out w-10/12 mx-auto rounded-xl border dark:border-slate-700 p-8 drop-shadow-xl shadow-lg mt-10" data-aos="fade-down" data-aos-offset="50">
+      <div class="flex flex-col lg:flex-row bg-white dark:bg-black transition duration-300 ease-in-out w-10/12 mx-auto rounded-xl border dark:border-slate-700 p-8 drop-shadow-xl shadow-lg mt-10" data-aos="zoom-in">
         <div class="flex-1 mx-4">
           <h1 class="text-center text-3xl font-semibold font-['Comfortaa'] mb-4">Frontend</h1>
 
@@ -273,7 +273,7 @@
           <h1 class="text-5xl font-['Acme'] text-white border-b-4 pb-2 border-sky-300 inline-block relative z-10 mb-14">My Project</h1>
 
           <div class="grid grid-flow-row auto-rows-max lg:grid-cols-3 gap-8">
-            <a href="https://github.com/NetSinx/go-restful-API" target="_blank" class="bg-white dark:bg-black dark:text-white transition duration-300 ease-in-out block rounded-xl drop-shadow-[0_0_8px_rgba(0,0,0,0.8)] relative z-10 pb-8 mt-4 overflow-clip card-project" data-aos="fade-down">
+            <a href="https://github.com/NetSinx/go-restful-API" target="_blank" class="bg-white dark:bg-black dark:text-white transition duration-300 ease-in-out block rounded-xl drop-shadow-[0_0_8px_rgba(0,0,0,0.8)] relative z-10 pb-8 mt-4 overflow-clip card-project" data-aos="zoom-in-down">
               <div class="hover:bg-gray-200/[.4] absolute z-10 w-full h-full duration-300"></div>
               <div class="overflow-clip">
                 <img src="src/images/go-api.jpeg" class="rounded-t-xl duration-300">
@@ -284,7 +284,7 @@
               </div>
             </a>
             
-            <a href="https://github.com/NetSinx/yconnect-shop" target="_blank" class="bg-white dark:bg-black dark:text-white transition duration-300 ease-in-out block rounded-xl drop-shadow-[0_0_8px_rgba(0,0,0,0.8)] relative z-10 pb-8 mt-4 overflow-clip card-project" data-aos="fade-down" data-aos-delay="300">
+            <a href="https://github.com/NetSinx/yconnect-shop" target="_blank" class="bg-white dark:bg-black dark:text-white transition duration-300 ease-in-out block rounded-xl drop-shadow-[0_0_8px_rgba(0,0,0,0.8)] relative z-10 pb-8 mt-4 overflow-clip card-project" data-aos="zoom-in-down" data-aos-delay="300">
               <div class="hover:bg-gray-200/[.4] absolute z-10 w-full h-full duration-300"></div>
               <div class="overflow-clip">
                 <img src="src/images/angular+logo.png" class="rounded-t-xl duration-300">
@@ -295,7 +295,7 @@
               </div>
             </a>
             
-            <a href="https://github.com/NetSinx/yconnect-news" target="_blank" class="bg-white dark:bg-black dark:text-white transition duration-300 ease-in-out block rounded-xl drop-shadow-[0_0_8px_rgba(0,0,0,0.8)] relative z-10 pb-8 mt-4 overflow-clip card-project" data-aos="fade-down" data-aos-delay="500">
+            <a href="https://github.com/NetSinx/yconnect-news" target="_blank" class="bg-white dark:bg-black dark:text-white transition duration-300 ease-in-out block rounded-xl drop-shadow-[0_0_8px_rgba(0,0,0,0.8)] relative z-10 pb-8 mt-4 overflow-clip card-project" data-aos="zoom-in-down" data-aos-delay="600">
               <div class="hover:bg-gray-200/[.4] absolute z-10 w-full h-full duration-300"></div>
               <div class="overflow-clip">
                 <img src="src/images/laravel.png" class="rounded-t-xl duration-300">
