--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
         <a href="https://www.instagram.com/yasin.a.h_" target="_blank"><i class="fa-brands fa-instagram"></i></a>
       </div>
 
-      <h1 class="text-center text-white mt-10 font-['Poppins']">Copyright&copy;2023 by Yasin A.H.💖</h1>
+      <h1 class="text-center text-white mt-10 font-['Poppins']">Copyright&copy;2023 by Yasin A.H.</h1>
     </div>
   </section>
 
